--- a/css/css.css
+++ b/css/css.css
@@ -381,14 +381,14 @@ hr {
   }
 
 ._j68 {
-    background-color: #118f69;
+    background-color: #118f69 !important;
 }
 
 ._j68 .promptHeaderAndBubbleContainer .promptTextBubble {
-  background:#148261;
-  color: white;
+  background:#148261 !important;
+  color: white !important;
 }
 
 ._j68 .promptHeaderAndBubbleContainer .promptHeaderText {
-  color: rgba(255, 255, 255, 0);
+  color: rgba(255, 255, 255, 0) !important;
 }
